# nix-search

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  FEATURES.md  README.md  justfile
.claude/: settings.local.json
.github/workflows/: ci-image.yml  ci-parity-once.yml  perf-size-budget-rs.yml  perf-size-budget.yml  wasm-data-publish-rs.yml  wasm-data-publish.yml
ci/: Dockerfile  image.sha
crates/ci/: Cargo.toml  README.md
crates/ci/src/: env.rs  lib.rs  main.rs  manifest.rs  pipelines.rs  shell.rs
crates/ci/src/steps/: budgets.rs  manifest_outputs.rs  mod.rs  pages_artifact_prep.rs  prep_web.rs  publish_summary.rs  sync_assets.rs  trunk_build.rs
crates/ci/tests/: budget_config_env.rs  cli_parse.rs  defaults_match_shell.rs  env_output.rs  error_context.rs  latency_probe_unit.rs  manifest_outputs.rs  manifest_parse.rs  parity_vs_shell.rs  pipeline_ordering.rs  publish_pipeline_error.rs  publish_pipeline_ordering.rs  publish_summary_snapshot.rs  report_render.rs  shell_redaction.rs  sync_assets_fs.rs  sync_assets_fs_no_compressed.rs  threshold_eval.rs
crates/ci/tests/fixtures/: manifest.json
crates/ci/tests/snapshots/: cli_parse__help.snap  publish_summary_snapshot__publish_summary_snapshot.snap  report_render__renders_markdown_report.snap
crates/nix-search-core/: Cargo.toml
crates/nix-search-web/: Cargo.toml  index.html
crates/nix-search-web/src/: cache_sync.rs  lib.rs  main.rs  search_runtime.rs
crates/nix-search-web/static/: app.css  sw.js
demo/: nix-search.tape
impl/2026-04-performance-size-speed/: DESCRIPTION.md  FOLLOW_UP.toml  PLAN.md  stage-01-WORKLOG.md  stage-01-measurement-and-release-paths.md  stage-02-WORKLOG.md  stage-02-index-creation-throughput.md  stage-03-WORKLOG.md  stage-03-prep-web-throughput-and-payload.md  stage-04-WORKLOG.md  stage-04-static-files-and-wasm-size.md  stage-05-WORKLOG.md  stage-05-web-startup-and-hydration-speed.md  stage-06-WORKLOG.md  stage-06-compressed-artifact-fetch.md  stage-07-WORKLOG.md  stage-07-regression-refresh-search-lag.md  stage-08-WORKLOG.md  stage-08-input-io-decoupling.md  stage-09-WORKLOG.md  stage-09-elm-like-search-update-loop.md  stage-10-WORKLOG.md  stage-10-cache-reset-and-diagnostics-accuracy.md  stage-11-WORKLOG.md  stage-11-fuzzy-typo-and-visible-result-cap.md  stage-12-WORKLOG.md  stage-13-WORKLOG.md  stage-14-WORKLOG.md  (+9 more)
src/: lib.rs  main.rs  platform.rs  prep.rs  types.rs
tests/: live_integration.rs
(+95 files in other folders)
