[package]
name = "nix-search"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/nix-search-core", "crates/nix-search-web"]
resolver = "2"

[[bin]]
name = "nix-search"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
nix-search-core = { path = "crates/nix-search-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
brotli = "8.0.2"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
rayon = "1.11.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "native-tls"], default-features = false }
sha2 = "0.10.9"
tantivy = { version = "0.26.0", default-features = false, features = ["mmap", "stopwords", "stemmer", "lz4-compression"] }
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.package.nix-search-web]
opt-level = "z"
