[package]
name = "ci"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.102"
brotli = "8.0.2"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
xshell = "0.2.7"

[dev-dependencies]
assert_cmd = "2.0.16"
insta = "1.43.2"
predicates = "3.1.3"
tempfile = "3.27.0"